# GPL-Project

./: Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
config/: __init__.py  dbConfig.py
model/: GroupModel.py  UserModel.py
route/: UserRoute.py
schema/: GroupSchema.py  UserSchema.py
src/config/: __init__.py  dbConfig.py
src/dependencies/: getCurrentUser.py
src/middleware/: HandleExceptions.py
src/model/: TravelModel.py  UserModel.py
src/route/: TravelRoute.py  UserRoute.py
src/schema/: TravelSchema.py  UserSchema.py  __init__.py
test/: user_test.http
