[project]
name = "gpl-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Dheeraj Sharma",email = "greatnerve@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "python-dotenv (==1.0.1)",
    "pydantic[email] (>=2.10.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
packages = [
    { include = "config" },
    { include = "dependencies" },
    { include = "middleware" },
    { include = "model" },
    { include = "route" },
    { include = "schema" },
    { include = "utils" }
]
